tests/snapshots/errors/struct_field_type_error.mc
struct Point {
    x: int,
    y: int
}
let p = Point { x: "hello", y: 10 };
